<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Uoccin</string>
    
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort_name">Sort by title</string>
    <string name="action_sort_year">Sort by year</string>
    <string name="action_sort_rats">Sort by stars</string>
    <string name="action_backup">Backup database</string>
    <string name="action_restore">Restore database</string>
    <string name="action_syncnow">Synchronize now</string>
    <string name="action_cleandb">Clean database</string>
    <string name="action_chktvdb">Check TVDB rss</string>
    
    <string name="drwhdr_series">Series</string>
    <string name="drwhdr_movies">Movies</string>
    <string name="drwhdr_services">Services</string>
    <string name="drwhdr_develop">Development</string>
    
    <string name="search_dialog">Search titles</string>
    <string name="search_hint">Search text</string>
    <string name="search_type">Search for:</string>
    <string name="search_series">Series</string>
    <string name="search_movies">Movies</string>
    <string name="search_no_text">Please provide some text to look for.</string>
    <string name="search_not_found">Title not found.</string>
    
    <string name="title_search">Results for \"%s\"</string>
    
    <string name="fmt_status_run">Continuing</string>
    <string name="fmt_status_end">Ended</string>
    <string name="fmt_airdate">EEE dd, yyyy</string>
    <string name="fmt_airday">EEE</string>
    <string name="fmt_airtime">EEE hh:mm a</string>
    <string name="fmt_nums_done">%d (completed)</string>
    <string name="fmt_nums_coll">%1$d (%2$d missing)</string>
    <string name="fmt_nums_seen">%1$d (%2$d to watch)</string>
    
    <string name="lbl_comm_wlst">Watchlist</string>
    <string name="lbl_comm_coll">Library</string>
    <string name="lbl_comm_seen">Seen</string>
    <string name="lbl_comm_shar">Share</string>
    <string name="lbl_comm_tvdb">TVDB</string>
    <string name="lbl_comm_imdb">IMDB</string>
    <string name="lbl_comm_refr">Refresh</string>
    <string name="lbl_comm_plot">plot</string>
    <string name="lbl_comm_wrts">writer(s)</string>
    <string name="lbl_comm_lang">language(s)</string>
    <string name="lbl_comm_link">links</string>
    <string name="lbl_comm_seas">season</string>
    <string name="lbl_comm_epis">episode</string>
    <string name="lbl_comm_ratd">rated:</string>
    <string name="lbl_comm_gens">genre</string>
    <string name="lbl_comm_tags">tags</string>
    <string name="lbl_comm_rats">your rating</string>
    
    <string name="lbl_serinf_with">starring</string>
    <string name="lbl_serinf_seas">seasons</string>
    
    <string name="lbl_epinf_gues">guest star(s)</string>
    <string name="lbl_epinf_dire">director</string>
    
    <string name="lbl_movinf_dire">A film by</string>
    <string name="lbl_movinf_cast">cast</string>
    <string name="lbl_movinf_awrd">scores/awards</string>
    <string name="lbl_movinf_meta">metacritic</string>
    <string name="lbl_movinf_imdb">imdb</string>
    <string name="lnk_movinf_acts">[see IMDB full cast &amp; crew]</string>
    
    <string name="empty_text"></string>
    <string name="none_text">None</string>
    <string name="null_text">Null</string>
    <string name="dlg_btn_ok">OK</string>
    <string name="dlg_btn_cancel">Cancel</string>
    <string name="dlg_btn_retry">Try again</string>
    <string name="hint_filter">filter text</string>
    <string name="ask_backup">This will overwrite the current uoccin.json file (if exists) shared on Google Drive. Are you sure to continue?</string>
    <string name="ask_restore">This will overwrite your current series and movies watchlist, collection and ratings on this device. Are you sure to continue?</string>
    <string name="ask_set_series_coll_true">Are you sure to mark all episodes as collected?</string>
    <string name="ask_set_series_coll_false">Are you sure to mark all episodes as NOT collected?</string>
    <string name="ask_set_series_seen_true">Are you sure to mark all episodes as watched?</string>
    <string name="ask_set_series_seen_false">Are you sure to mark all episodes as NOT watched?</string>
    <string name="ask_set_season_coll_true">Are you sure to mark all episodes in this season as collected?</string>
    <string name="ask_set_season_coll_false">Are you sure to mark all episodes in this season as NOT collected?</string>
    <string name="ask_set_season_seen_true">Are you sure to mark all episodes in this season as watched?</string>
    <string name="ask_set_season_seen_false">Are you sure to mark all episodes in this season as NOT watched?</string>
    <string name="unknown_title">Unknown title</string>
    <string name="unknown_plot">Unknown plot</string>
    <string name="msg_wlst_add_mov">Movie \"%s\" added to watchlist</string>
    <string name="msg_wlst_del_mov">Movie \"%s\" removed from watchlist</string>
    <string name="msg_coll_add_mov">Movie \"%s\" added to collection</string>
    <string name="msg_coll_del_mov">Movie \"%s\" removed from collection</string>
    <string name="msg_seen_add_mov">Movie \"%s\" set as watched</string>
    <string name="msg_seen_del_mov">Movie \"%s\" set to be watched</string>
    <string name="msg_wlst_add_ser">Series \"%s\" added to watchlist</string>
    <string name="msg_wlst_del_ser">Series \"%s\" removed from watchlist</string>
    <string name="msg_coll_add_epi">Episode \"%s\" added to collection</string>
    <string name="msg_coll_del_epi">Episode \"%s\" removed from collection</string>
    <string name="msg_seen_add_epi">Episode \"%s\" set as watched</string>
    <string name="msg_seen_del_epi">Episode \"%s\" set to be watched</string>
    <string name="msg_tags_add">Tag \"%s\" added</string>
    <string name="msg_tags_del">Tag \"%s\" removed</string>
    <string name="msg_imdb_news">New series found! %s</string>
    
    <string name="msg_restore_1">Restoring database backup</string>
    <string name="msg_restore_2a">Uoccin backup not found</string>
    <string name="msg_restore_2b">Uoccin backup is empty</string>
    <string name="msg_restore_3">Backup contains %1$d movies and %2$d series</string>
    <string name="msg_restore_4">Restore terminated</string>
    
    <string name="notif_srv_info">Uoccin: service notification</string>
    <string name="notif_srv_fail">Uoccin: background service error</string>
    <string name="notif_gac_fail">Uoccin: Google Drive access error</string>
    <string name="notif_mov_wlst">Uoccin: new movie in watchlist</string>
    <string name="notif_mov_coll">Uoccin: new movie in library</string>
    <string name="notif_ser_prem">Uoccin: new series discovered</string>
    <string name="notif_ser_wlst">Uoccin: new series in watchlist</string>
    <string name="notif_ser_coll">Uoccin: new episode in library</string>
    <string name="notif_gen_miss">Tap here to retrieve all the title info</string>

    <!-- settings -->
    <string name="settings_title">Uoccin settings</string>
    <string name="pk_startup_title">Startup view</string>
    <string name="pk_startup_summ">The first view you want to see on startup.</string>
    <string name="pk_locale_title">Localization</string>
    <string name="pk_locale_summ">The language for titles and synopsis (where available).</string>
    <string name="pk_mdwifi_title">Limit autorefresh</string>
    <string name="pk_mdwifi_summ">The service will update movies/series info only on WiFi.</string>
    <string name="pc_tvdbcat_title">TVDB options</string>
    <string name="pk_tvdbrss_title">Check premieres</string>
    <string name="pk_tvdbrss_summ">Periodically check TVDB\'s \"airing today\" feed for new TV shows.</string>
    <string name="pk_tvdbgnf_title">Filter by genre</string>
    <string name="pk_tvdbgnf_summ">Ignore new TV shows labeled by these categories.</string>
    <string name="pc_gdrvcat_title">Google Drive</string>
    <string name="pk_gdrvacc_title">Select a Google account</string>
    <string name="pk_gdrvbak_title">Synchronization</string>
    <string name="pk_gdrvbak_summ">Manage your data on multiple devices (phones or desktop apps).</string>
    <string name="pk_gdrvwif_title">Only on WiFi</string>
    <string name="pk_gdrvint_title">Sync interval</string>
    <string name="pk_notmovw_title">Notify new movies in watchlist</string>
    <string name="pk_notmovc_title">Notify new movies in library</string>
    <string name="pk_notserw_title">Notify new series in watchlist</string>
    <string name="pk_notserc_title">Notify new episodes in library</string>
    <string name="pc_misccat_title">Miscellaneous</string>
    <string name="pk_notsnds_title">Notifications sound</string>
    <string name="pk_splrpro_title">Spoiler protection</string>
    <string name="pk_splrpro_summ">Long texts might contain spoilers, cut them short.</string>
    
    <!-- sample text -->
    <string name="sample_title1">A Short Title</string>
    <string name="sample_title2">Pirates of the Caribbean: The Curse of the Black Pearl (2003)</string>
    <string name="sample_number1">2</string>
    <string name="sample_number2">16</string>
    <string name="sample_number3">316</string>
    <string name="sample_number4">2016</string>
    <string name="sample_year">2007</string>
    <string name="sample_date1">Oct 13, 2013</string>
    <string name="sample_date2">13/02/2013</string>
    <string name="sample_time1">Wed 10:00 PM</string>
    <string name="sample_network">CBS</string>
    <string name="sample_country">USA, Canada</string>
    <string name="sample_ser_info">History Channel - Wed 10:00 PM</string>
    <string name="sample_mov_info">Joel Coen &amp; Ethan Coen, 2004</string>
    <string name="sample_epnum">4x13</string>
    <string name="sample_episode">4x13 - M.I.A.</string>
    <string name="sample_plot1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</string>
    <string name="sample_plot2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</string>
    <string name="sample_guy">George Washington</string>
    <string name="sample_people">Michael Emerson, Jim Caviezel, Kevin Chapman, Amy Acker, Sarah Shahi, Enrico Colantoni, Taraji P. Henson</string>
    <string name="sample_genres">Action, Adventure, Drama, Mystery, Thriller</string>
    <string name="sample_nextd">in 12 hours (Mon)</string>
    <string name="sample_rated">TV-14</string>
    <string name="sample_subs">eng, ita</string>
    <string name="sample_stat">12 / 43 collected</string>
    <string name="sample_stat1">121 (43 missing)</string>
    <string name="sample_tags">pippo, pluto, paperino, tafazzi, perdinci, drocopio</string>
    <string name="sample_season">S03</string>
    <string name="sample_director">Joel Coen &amp; Ethan Coen</string>
    <string name="sample_language">English, German</string>
    <string name="sample_metascore">74</string>
    <string name="sample_imdbrat">8.7</string>
    <string name="sample_imdbvot">573,918</string>
    <string name="sample_rotten">68%</string>
    <string name="sample_runtime">107 min</string>
    <string name="sample_awards">Won 1 Oscar. Another 32 wins &amp; 93 nominations.</string>

</resources>