<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:defaultValue="ser2see"
        android:dialogTitle="@string/pk_startup_title"
        android:entries="@array/view_defser_titles"
        android:entryValues="@array/view_defser_ids"
        android:key="pk_startup"
        android:summary="@string/pk_startup_summ"
        android:title="@string/pk_startup_title" />
    
    <ListPreference
        android:defaultValue="en"
        android:dialogTitle="@string/pk_locale_title"
        android:entries="@array/pk_locale_names"
        android:entryValues="@array/pk_locale_values"
        android:key="pk_locale"
        android:summary="@string/pk_locale_summ"
        android:title="@string/pk_locale_title" />

    <PreferenceCategory
        android:key="pc_tvdbcat"
        android:title="@string/pc_tvdbcat_title" >
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pk_tvdbrss"
            android:summary="@string/pk_tvdbrss_summ"
            android:title="@string/pk_tvdbrss_title" />
        
        <net.ggelardi.uoccin.comp.GenreFilterDialog
            android:key="pk_tvdbgflt"
            android:dialogTitle="@string/pk_tvdbgnf_title"
            android:summary="@string/pk_tvdbgnf_summ"
            android:title="@string/pk_tvdbgnf_title" />
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="pc_gdrvcat"
        android:title="@string/pc_gdrvcat_title" >
        
        <Preference
            android:key="pk_gdrv_account"
            android:title="@string/pk_gdrvacc_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pk_gdrvbak"
            android:summary="@string/pk_gdrvbak_summ"
            android:title="@string/pk_gdrvbak_title" />
        
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pk_gdrvwifi"
            android:title="@string/pk_gdrvwif_title" />

        <net.ggelardi.uoccin.comp.IntListPreference
            android:defaultValue="30"
            android:dialogTitle="@string/pk_gdrvint_title"
            android:entries="@array/pk_gdrvint_names"
            android:entryValues="@array/pk_gdrvint_values"
            android:key="pk_gdrvint"
            android:title="@string/pk_gdrvint_title" />
    </PreferenceCategory>

</PreferenceScreen>