<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_frame"
    android:orientation="horizontal"
    android:padding="5dp" >

    <TextView
        android:id="@+id/txt_sehdr_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@drawable/ic_action_back"
        android:gravity="center_vertical"
        android:text="@string/sample_number1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:divider="@drawable/divider_2dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_comm_seas"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/txt_sehdr_seas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:paddingRight="5dp"
            android:text="@string/sample_number2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_sehdr_coll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty_text"
            android:src="@drawable/ic_action_storage" />

        <ImageView
            android:id="@+id/img_sehdr_seen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty_text"
            android:src="@drawable/ic_action_seen" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_sehdr_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textView1"
        android:drawableRight="@drawable/ic_action_forward"
        android:gravity="center_vertical"
        android:text="@string/sample_number2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold" />

</RelativeLayout>